--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -14,8 +14,8 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 logging.level.org.zalando.logbook=TRACE
 
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./db/shareit
-#spring.datasource.url=jdbc:h2:mem:shareit;
+#spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.url=jdbc:h2:mem:shareit;
 spring.datasource.username=test
 spring.datasource.password=test
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
