--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,11 +11,12 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jpa.show-sql=true
-hibernate.show_sql = true
-hibernate.jdbc.time_zone = UTC
+hibernate.show_sql=true
+hibernate.jdbc.time_zone=UTC
 logging.level.org.zalando.logbook=TRACE
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=dbuser
-spring.datasource.password=12345
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+server.port=9090
